--- a/index.html
+++ b/index.html
@@ -1,31 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<h1>Hello World</h1>
-</body>
-</html>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>ProjectTitle</title>
-
-	<script src="main.js"></script>
-
-	<style>
-		body {
-			margin:0;
-			padding:0;
-			overflow: hidden;
-		}
-		canvas {
-			margin:auto;
-		}
-	</style>
-</head>
-<body>
-</body>
-</html>
+hhdhehbhfbhejjj		
