--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Project Title</title>
+	<title>Project Title - FIRST TRY</title>
 
 	<script src="main.js"></script>
 
