--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
-<html></html>
-,samd,samd
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-                     scale=1">
+  <meta charset="UTF-8">
+  <title> XYZ </title>
+</head>
+</html>
